src/Styles/pagecontents.module.scss
.pagecontent {
  animation-duration: 1s;
  animation-fill-mode: both;
  opacity: 0;
  animation-name: fadeInRight;
  position: fixed;
  min-width: 19rem;
  top: 11rem;
  left: 0;
  padding: 0.5%;
  padding-left: 2%;
  margin-top: -1.5rem;
  background-color: var(--background);
  border-bottom-right-radius: 50px;
  border-top-right-radius: 50px;
  box-shadow: 20px 20px 60px var(--shadow), -20px -20px 60px var(--highlight);
}

.list {
  padding: 0.2rem;
}

.toggle {
  display: none;
}

@media only screen and (max-width: 90rem) {
  .pagecontent {
    background: var(--background);
    position: fixed;
    left: calc(0% - 21rem);
    padding: 1.5rem;
    transition: left 0.4s ease-in-out;
    z-index: 1;
    box-shadow: none;
    border: 2px solid var(--Primary);
  }

  .toggle {
    display: inherit;
    position: absolute;
    left: 96%;
    top: 45%;
    font-size: 1rem;
  }

  .pagecontent:hover {
    left: 0px;
  }
}

@keyframes fadeInUp {
  from {
    transform: translate3d(0, 40px, 0);
  }

  to {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

@keyframes fadeInRight {
  from {
    transform: translate3d(-40px, 0, 0);
  }

  to {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

